# learning_loop_node

./: .drone.yml  .gitignore  CONTRIBUTING.md  README.md  base_node.dockerfile  conf.sh  darknet_trainer.dockerfile  demo_segmentation_tool.dockerfile  detection_node.dockerfile  detection_node_jetson.dockerfile  mock_annotation_node.dockerfile  mock_annotation_node_docker.sh  mock_converter.dockerfile  mock_detector.dockerfile  mock_trainer.dockerfile  n4.code-workspace  node.code-workspace  pyproject.toml  rb7.code-workspace  run_tests.sh  setup.py
detection_node/: backdoor_controls.py  c_classes.py  detection.py  detection_node.code-workspace  detection_node.dockerfile  detection_node_jetson.dockerfile  detections_helper.py  download_model_for_testing.sh  helper.py  inferences_helper.py  learning_loop_node  main.py  pyproject.toml  pytest.ini
detection_node/active_learner/: detection.py  learner.py  watcher.py
detection_node/active_learner_tests/: test_active_learner_detection.py  test_learner.py  test_watcher.py
detection_node/detection_node_tests/: conftest.py  test_detection.py  test_upload_image.py
learning_loop_node/: __init__.py  conftest.py  context.py  data_exchanger.py  environment_reader.py  events.py  gdrive_downloader.py  globals.py  helpers.py  log_conf.py  loop.py  loop_communication.py  model_information.py  node.py  node_helper.py  pyproject.toml  pytest.ini  rest.py  singleton.py  socket_response.py  status.py  task_logger.py  trainer.py  training_data.py
learning_loop_node/annotation/: annotator_logic.py  annotator_model.py  annotator_node.py
learning_loop_node/annotation/tests/: test_annotator_node.py
learning_loop_node/annotation_node/: annotation_node.py  annotation_tool.py  data_classes.py
learning_loop_node/annotation_node/tests/: test_annotation_node.py
learning_loop_node/converter/: converter.py  converter_logic.py  converter_model.py  converter_node.py  mock_converter.py  model_information.py
learning_loop_node/converter/tests/: test_converter.py
learning_loop_node/data_classes/: __init__.py  annotation_data.py  annotations.py  basic_data.py  category.py  context.py  detections.py  general.py  image_metadata.py  socket_response.py  training.py
learning_loop_node/decorators/: error_handler.py
learning_loop_node/detector/: __init__.py  about.py  box_detection.py  classification_detection.py  detections.py  detector.py  detector_logic.py  detector_node.py  exceptions.py  operation_mode.py  outbox.py  point_detection.py  segmentation_detection.py
learning_loop_node/detector/inbox_filter/: cam_observation_history.py  relevance_filter.py
learning_loop_node/detector/outbox/: outbox.py  upload_process.py
learning_loop_node/detector/rest/: about.py  backdoor_controls.py  detect.py  model_version_control.py  operation_mode.py  outbox_mode.py  upload.py
learning_loop_node/detector/tests/: conftest.py  test_client_communication.py  test_io.py  test_outbox.py  test_relevance_filter.py  test_relevants_filter.py  testing_detector.py
learning_loop_node/enums/: __init__.py  annotator.py  detector.py  general.py  trainer.py
learning_loop_node/examples/: novelty_score_updater.py
learning_loop_node/helper_functions/: helpers.py  node_helper.py
learning_loop_node/helpers/: background_tasks.py  environment_reader.py  gdrive_downloader.py  log_conf.py  misc.py  run.py
learning_loop_node/inbox_filter/: __init__.py  observation.py  relevance_filter.py  relevance_group.py  relevants_filter.py  relevants_group.py
learning_loop_node/inbox_filter/tests/: test_observation.py  test_relevance_group.py  test_relevants_group.py  test_unexpected_observations_count.py
learning_loop_node/learning_loop_node/: node.py
learning_loop_node/rest/: downloader.py  downloads.py  uploads.py
learning_loop_node/rest_helpers/: downloader.py  downloads.py  uploads.py
learning_loop_node/synchronizer/: model_syncronizer.py
learning_loop_node/tests/: conftest.py  mock_async_client.py  test_client_connect.py  test_data_classes.py  test_detector.py  test_downloader.py  test_executor.py  test_helper.py  test_learning_loop_node.py  test_loop.py
learning_loop_node/tests/annotator/: conftest.py  pytest.ini  test_annotator_node.py
learning_loop_node/tests/detector/: conftest.py  test_client_communication.py  test_detector_node.py  test_outbox.py  test_relevance_filter.py  testing_detector.py
learning_loop_node/tests/general/: conftest.py  test_data_classes.py  test_downloader.py  test_learning_loop_node.py
learning_loop_node/tests/trainer/: conftest.py  state_helper.py  test_errors.py  test_trainer_states.py  testing_trainer_logic.py
learning_loop_node/trainer/: __init__.py  active_training.py  basic_data.py  capability.py  downloader.py  downloader_factory.py  error_configuration.py  errors.py  exceptions.py  executor.py  helper.py  hyperparameter.py  io_helpers.py  mock_trainer.py  model.py  preparing_state.py  test_executor.py  trainer.py  trainer_logic.py  trainer_logic_abstraction.py  trainer_logic_generic.py  trainer_node.py  training.py  training_data.py  training_io_helpers.py  training_status.py  training_syncronizer.py
mock_converter/: backdoor_controls.py  main.py  mock_converter.code-workspace  mock_converter.py  mock_converter_model.py  pyproject.toml  pytest.ini  start.sh
mock_converter/app_code/: backdoor_controls.py  mock_converter_logic.py
mock_converter/mock_converter_tests/: test_dummy.py
mock_converter/restart/: restart.py
mock_converter/tests/: test_dummy.py
mock_trainer/: backdoor_controls.py  main.py  mock_trainer.code-workspace  mock_trainer.py  mock_trainer_logic.py  progress_simulator.py  pyproject.toml  pytest.ini  results.py  start.sh  status.py  trainer.dockerfile
mock_trainer/app/: main.py  pyproject.toml
mock_trainer/app_code/: backdoor_controls.py  custom_formatter.py  mock_trainer_logic.py  progress_simulator.py
mock_trainer/mock_trainer_tests/: conftest.py  test_failing_test.py  test_helper.py  test_mock_trainer.py
mock_trainer/tests/: conftest.py  test_detections.py  test_mock_trainer.py
(+129 files in other folders)
