[project]
name = "learning_loop_node"
version = "0.18.0"
description = "Python Library for Nodes which connect to the Zauberzeug Learning Loop"
authors = [{ name = "Zauberzeug GmbH", email = "info@zauberzeug.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.128,<1.0",
    "uvicorn[standard]>=0.22.0,<0.23.0",
    "fastapi-utils>=0.8.0,<0.9.0",
    "requests>=2.25.1,<3.0.0",
    "python-socketio>=5.7.2,<6.0.0",
    "simplejson>=3.17.2,<4.0.0",
    "icecream>=2.1.0,<3.0.0",
    "aiofiles>=0.7.0,<0.8.0",
    "async_generator>=1.10,<2.0.0",
    "pytest-watch>=4.2.0,<5.0.0",
    "python-multipart>=0.0.18,<0.0.19",
    "psutil>=5.8.0,<6.0.0",
    "numpy>=2.0,<3.0",
    "Pillow>=11.0.0,<12.0.0",
    "tqdm>=4.66.3,<5.0.0",
    "pytest-mock>=3.6.1,<4.0.0",
    "pynvml>=11.4.1,<12.0.0",
    "aiohttp>=3.13.3,<4.0.0",
    "httpx>=0.28.1,<0.29.0",
    "dacite>=1.8.1,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest-flakefinder>=1.1.0,<2.0.0",
    "retry>=0.9.2,<0.10.0",
    "debugpy>=1.6.7.post1,<2.0.0",
    "pytest-asyncio>=0.21.1,<0.22.0",
    "autopep8>=2.0.2,<3.0.0",
]

[project.urls]
Repository = "https://github.com/zauberzeug/learning_loop_node"

[tool.setuptools.packages.find]
where = ["."]
include = ["learning_loop_node", "learning_loop_node.*"]
exclude = ["learning_loop_node.tests*", "learning_loop_node.examples*"]

[tool.mypy]
ignore_missing_imports = true
