[tool.poetry]
name = "mock_converter"
version = "0.1.0"
description = "AI converter for the Zauberzeug Learning Loop"
authors = ["Zauberzeug <info@zauberzeug.com>"]

[tool.poetry.dependencies]
python = "^3.7"
learning_loop_node = { path = "../", develop = true }
icecream = "^2.1.0"
debugpy = "^1.2.1"
aiofiles = "^0.6.0"
python-socketio = {extras = ["asyncio_client"], version = "^5.0.4"}
pytest-asyncio = "^0.15.1"
pytest-watch = "^4.2.0"
retry = "^0.9.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
autopep8 = "^1.5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
